--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,18 @@ header {
 
 .nav-links {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   gap: 100px;
-   overflow-x: auto;
+   
 }
+
+.nav-links a {
+  white-space: nowrap;
+  flex: 1 1 auto;
+  text-align: center;
+  min-width: 80px;
+}
+
 
 .nav-links a {
    font-family: 'Montserrat', sans-serif;
