--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,18 @@ main {
 
 
 
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
 
 
 
